--- a/src/not-alone/components/hand.scss
+++ b/src/not-alone/components/hand.scss
@@ -39,7 +39,7 @@ $deck-top-card-shift-y: ($decks-max-cards-displayed - 1) * $decks-card-shift-y;
     }
 
     &:not(.dragging) > .card-wrapper-inner {
-      transition: all 0.3s 0.3s ease-out;
+      transition: left 0.3s 0.3s ease-out, top 0.3s 0.3s ease-out, transform 0.3s ease-in-out;
     }
   }
 
